feat: add basic service layer
