# services/clothing/models/models.go
@@ -1,0 +1,21 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.28.0
+
+package models
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Clothe struct {
+	ID        pgtype.UUID
+	Name      string
+	Category  string
+	Color     string
+	Size      string
+	Brand     string
+	Location  string
+	CreatedAt pgtype.Timestamp
+	UpdatedAt pgtype.Timestamp
+}
